--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "Name": "Fendi ALS",
-    "Description": "",
+    "Description": "fendi als mango",
     "Author": "fendi",
     "Version": "v1.0.0",
     "Image": "https://i.ibb.co/WWGcqgwK/fendilogo1.png",
